--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Twitter Super Bowl</title>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="main.js" type="text/javascript" charset="utf-8"></script>
+    <script src="/main.js" type="text/javascript" charset="utf-8"></script>
     <link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
         <h1>GT Big Data Club</h1>
         <div class="center-2">
             <span id="heading">
-                <img src="sb48.jpg" width=200px height=200px/>
+                <img src="/sb48.jpg" width=200px height=200px/>
                 Via
                 <img src="/twitter-icon.png" width=200px height=200px/>
             </span>
