--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <h1>GT Big Data Club</h1>
         <div class="center-2">
             <span id="heading">
-                <img src="/sb48.jpg" width=200px height=200px/>
+                <img src="/twitter-superbowl/sb48.jpg" width=200px height=200px/>
                 Via
-                <img src="/twitter-icon.png" width=200px height=200px/>
+                <img src="/twitter-superbowl/twitter-icon.png" width=200px height=200px/>
             </span>
         </div>
         <input id="periodSel" type="range" min=-193 max=331 />
