--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <title>Twitter Super Bowl</title>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="/main.js" type="text/javascript" charset="utf-8"></script>
-    <link rel="stylesheet" type="text/css" href="/style.css">
+    <script src="/twitter-superbowl/main.js" type="text/javascript" charset="utf-8"></script>
+    <link rel="stylesheet" type="text/css" href="/twitter-superbowl/style.css">
 </head>
 <body>
     <div class="center">
